--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,12 @@ monolithic = ["fs" ,"axfs/monolithic", "axhal/monolithic", "axtask/monolithic"]
 default = ["monolithic"]
 
 [dependencies]
-axfs = { git = "https://github.com/Starry-OS/axfs.git", optional = true }
-axhal = { git = "https://github.com/Starry-OS/axhal.git" }
+axfs = { git = "https://github.com/Josen-B/axfs.git", optional = true }
+axhal = { git = "https://github.com/Josen-B/axhal.git" }
 log = "0.4"
 axlog = { git = "https://github.com/Starry-OS/axlog.git" }
-axtask = { git = "https://github.com/Starry-OS/axtask.git" }
+axtask = { git = "https://github.com/Josen-B/axtask.git" }
 axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
-axsync = {git = "https://github.com/Starry-OS/axsync.git"}
+axsync = {git = "https://github.com/Josen-B/axsync.git"}
 hashbrown = "0.11"
 lazy_static = "1.5.0"
